--- a/class/index02.html
+++ b/class/index02.html
@@ -2,54 +2,51 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>电影时间</title>
 </head>
 <body>
 <!--头部-->
-<div style="height: 56px" ;>
-    <img src="image/logo.jpg" alt="" align="left"/>
-    <p align="right">电影时间首页&nbsp;&nbsp;|&nbsp;&nbsp;登录&nbsp;&nbsp;|&nbsp;&nbsp;注册&nbsp;&nbsp;|&nbsp;&nbsp;<font
-            color="red">收藏</font>
+<div style="width:980px; margin: 0 auto;height: 70px">
+    <img src="image/logo.jpg" alt="" align="left" />
+    <p align="right">电影时间首页&nbsp;&nbsp;|&nbsp;&nbsp;登录&nbsp;&nbsp;|&nbsp;&nbsp;注册&nbsp;&nbsp;|&nbsp;&nbsp;<font color="red">收藏</font>
     </p>
 </div>
-<hr color="blue">
-<!--banner和最新电影模块-->
-<div style="margin: 0 auto">
-    <img src="image/banner.jpg" width="1500">
+<hr color="blue" style="width: 980px">
+<!--banner-->
+<div style="width: 980px; margin: 0 auto;">
+    <img src="image/banner.jpg" width="980px" />
 </div>
-<h2>电影介绍</h2>
+<!--最新电影模块-->
+<div style="width: 980px; margin: 0 auto;"><h2>最新电影</h2>
 <hr color="yellow">
-<div>
-    <img src="image/img_01.jpg">
-    <img src="image/img_02.jpg">
-    <img src="image/img_03.jpg">
-    <img src="image/img_04.jpg">
-    <img src="image/img_05.jpg">
-    <img src="image/img_06.jpg">
-    <img src="image/img_07.jpg">
-    <img src="image/img_08.jpg">
-    <img src="image/img_09.jpg">
+    <img src="image/img_01.jpg" />
+    <img src="image/img_02.jpg" />
+    <img src="image/img_03.jpg" />
+    <img src="image/img_04.jpg" />
+    <img src="image/img_05.jpg" />
+    <img src="image/img_06.jpg" />
+    <img src="image/img_07.jpg" />
+    <img src="image/img_08.jpg" />
+    <img src="image/img_09.jpg" />
 </div>
 <!--热门电影介绍模块-->
-<div>
+<div style="width: 980px; margin: 0 auto">
     <h2 align="left">热门电影介绍</h2>
 </div>
-<hr color="black">
-<div style="height: 700">
-    <img src="image/moviebanner.jpg" align="right">
-    <p align="left";>
+<hr color="black" style="width: 980px">
+<div style="width: 980px; height: 305px; margin: 0 auto">
+    <img src="image/moviebanner.jpg" align="right" />
+    <p style="width: 500px" align="left">
         <font color="red"><ins>西游降魔篇</ins></font>
         <font color="blue"><ins>高清视频在线观看 爱奇艺</ins></font>
-    </p>
-    <p>
-        上映时间：2013年2月10日
         <br>
-        导演：<font color="red">周星驰 郭子健</font>
+        <font>上映时间：2013年2月10日</font>
         <br>
-        发行公司：安乐影片
+        <font>导演：<font color="red">周星驰 郭子健</font> </font>
         <br>
-        <font color="blue">主演：
-            <ins>黄渤</ins>
+        <font>发行公司：安乐影片</font>
+        <br>
+        <font color="blue">主演：<ins>黄渤</ins>
             <ins>文章</ins>
             <ins>舒淇</ins>
             <ins>周秀娜</ins>
@@ -59,21 +56,75 @@
             <ins>李尚正</ins>
         </font>
         <br>
-        片长：110分钟
+        <font>片长110分钟</font>
         <br>
-        <font color="red">类型： 冒险 奇幻 喜剧</font>
+        <font color="red">类型：<em>冒险 奇幻 喜剧</em></font>
         <br>
-        定价： <font color="red">150元</font>
+        定价：<font color="red"><strong>150元</strong></font>
         <br>
-        简介：受气的唐僧、暴戾的孙悟空、帅气的猪八戒、妩媚的沙僧，完全颠覆版西游记，周星驰时隔15年自编自导再战西游。
-        这是个妖魔横行的世界，百姓苦不堪言。年轻的驱魔人玄奘以“舍小我，成大我”的大无畏精神，历经艰难险阻，依次收复水妖、主要以及妖王之王孙悟空为徒，并用“爱”将他们感化......
+        <font> 简介：受气的唐僧、暴戾的孙悟空、帅气的猪八戒、妩媚的沙僧，完全颠覆版西游记，周星驰时隔15年自编自导再战西游。
+            这是个妖魔横行的世界，百姓苦不堪言。年轻的驱魔人玄奘以“舍小我，成大我”的大无畏精神，历经艰难险阻，依次收复水妖、主要以及妖王之王孙悟空为徒，并用“爱”将他们感化......</font>
     </p>
-    <hr color="blue">
 </div>
+    <hr color="blue" style="width: 980px">
 <!--网友评论模块-->
-<div>
-    <img src="image/comment.jpg">
-    <hr color="grey">
+<div style="width: 980px; margin: 0 auto">
+    <img src="image/comment.jpg" alt="" />
+    <hr color="#CCC" size="1">
+    <div>
+    <img src="image/pic01.jpg" alt="" align="left" hspace="10">
+        <p>
+            <font color="orange">影迷无敌001</font>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2" color="#999">2016-6-12 15:38:37</font>
+        </p>
+        <p>
+            <font size="2">请剧情党们不要太较真电影对魔兽历史的更改。</font>
+            <br>
+            <font color="orange" size="2">来自：大众点评网友</font>
+        </p>
+     </div>
+    <hr color="#CCC" size="1">
+</div>
+<div style="width: 980px; margin: 0 auto">
+    <img src="image/pic02.jpg" alt="" align="left" hspace="10"/>
+    <div>
+        <p>
+            <font color="orange">时光不老</font>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2" color="#999">2015-3-2 15:05:37</font>
+        </p>
+        <p>
+            <font size="2">个人认为小时代毫无看点，看了不到半小时就要睡着了，我已经无力吐槽。建议大家去读原著吧！！！</font>
+            <br>
+            <font color="orange" size="2">来自：星光影院网友</font>
+        </p>
+    </div>
+    <hr color="#CCC" size="1">
+</div>
+<div style="width: 980px; margin: 0 auto">
+    <img src="image/pic03.jpg" alt="" align="left" hspace="10"/>
+    <div>
+        <p>
+            <font color="orange">cocoke</font>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2" color="#999">2016-2-14 10:38:36</font>
+        </p>
+        <p>
+            <font size="2">星爷的每一部电影都很经典，重复地看过很多遍，每次都有更深刻的理解和更深的感情，同样期待《美人鱼》</font>
+            <br>
+            <font color="orange" size="2">来自：美团网网友</font>
+        </p>
+    </div>
+    <hr color="#CCC" size="1">
+</div>
+<!--底部模块-->
+<div style="text-align: center;">
+    <p>
+        <font size="2">
+            <font color="blue">
+            公司简介 | 关于我们 | 联系我们 | 友情链接 | 招聘信息 | 产品答疑
+            </font>
+            <br>
+            <font color="red">免责声明：</font>本网站内容收集与互联网，电影时光网不承担任何由于内容的合法性及健康性所引起的争议和法律责任。
+            <br>
+            欢迎大家对网站内容侵犯版权等不合法和不健康的行为进行监督和举报。
+        </font>
+    </p>
 </div>
 </body>
 </html>
