--- a/class/index02.html
+++ b/class/index02.html
@@ -7,27 +7,27 @@
 <body>
 <!--头部-->
 <div style="width:980px; margin: 0 auto;height: 70px">
-    <img src="image/logo.jpg" alt="" align="left" />
+    <img src="logo.jpg" alt="" align="left" />
     <p align="right">电影时间首页&nbsp;&nbsp;|&nbsp;&nbsp;登录&nbsp;&nbsp;|&nbsp;&nbsp;注册&nbsp;&nbsp;|&nbsp;&nbsp;<font color="red">收藏</font>
     </p>
 </div>
 <hr color="blue" style="width: 980px">
 <!--banner-->
 <div style="width: 980px; margin: 0 auto;">
-    <img src="image/banner.jpg" width="980px" />
+    <img src="banner.jpg" width="980px" />
 </div>
 <!--最新电影模块-->
 <div style="width: 980px; margin: 0 auto;"><h2>最新电影</h2>
 <hr color="yellow">
-    <img src="image/img_01.jpg" />
-    <img src="image/img_02.jpg" />
-    <img src="image/img_03.jpg" />
-    <img src="image/img_04.jpg" />
-    <img src="image/img_05.jpg" />
-    <img src="image/img_06.jpg" />
-    <img src="image/img_07.jpg" />
-    <img src="image/img_08.jpg" />
-    <img src="image/img_09.jpg" />
+    <img src="img_01.jpg" />
+    <img src="img_02.jpg" />
+    <img src="img_03.jpg" />
+    <img src="img_04.jpg" />
+    <img src="img_05.jpg" />
+    <img src="img_06.jpg" />
+    <img src="img_07.jpg" />
+    <img src="img_08.jpg" />
+    <img src="img_09.jpg" />
 </div>
 <!--热门电影介绍模块-->
 <div style="width: 980px; margin: 0 auto">
@@ -35,7 +35,7 @@
 </div>
 <hr color="black" style="width: 980px">
 <div style="width: 980px; height: 305px; margin: 0 auto">
-    <img src="image/moviebanner.jpg" align="right" />
+    <img src="moviebanner.jpg" align="right" />
     <p style="width: 500px" align="left">
         <font color="red"><ins>西游降魔篇</ins></font>
         <font color="blue"><ins>高清视频在线观看 爱奇艺</ins></font>
@@ -69,10 +69,10 @@
     <hr color="blue" style="width: 980px">
 <!--网友评论模块-->
 <div style="width: 980px; margin: 0 auto">
-    <img src="image/comment.jpg" alt="" />
+    <img src="comment.jpg" alt="" />
     <hr color="#CCC" size="1">
     <div>
-    <img src="image/pic01.jpg" alt="" align="left" hspace="10">
+    <img src="pic01.jpg" alt="" align="left" hspace="10">
         <p>
             <font color="orange">影迷无敌001</font>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2" color="#999">2016-6-12 15:38:37</font>
         </p>
@@ -85,7 +85,7 @@
     <hr color="#CCC" size="1">
 </div>
 <div style="width: 980px; margin: 0 auto">
-    <img src="image/pic02.jpg" alt="" align="left" hspace="10"/>
+    <img src="pic02.jpg" alt="" align="left" hspace="10"/>
     <div>
         <p>
             <font color="orange">时光不老</font>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2" color="#999">2015-3-2 15:05:37</font>
@@ -99,7 +99,7 @@
     <hr color="#CCC" size="1">
 </div>
 <div style="width: 980px; margin: 0 auto">
-    <img src="image/pic03.jpg" alt="" align="left" hspace="10"/>
+    <img src="pic03.jpg" alt="" align="left" hspace="10"/>
     <div>
         <p>
             <font color="orange">cocoke</font>&nbsp;&nbsp;&nbsp;&nbsp;<font size="2" color="#999">2016-2-14 10:38:36</font>
