--- a/实验3谭木记/project03.html
+++ b/实验3谭木记/project03.html
@@ -10,10 +10,38 @@
 <div class="header">
     <img src="logo.jpg"/>
 </div>
+<!--banner-->
 <div class="banner">
-    <h2>时尚原木</h2>
+    <h2>原木时尚>></h2>
+    <img src="banner.jpg"/>
 </div>
-<div class="content"></div>
-<div class="rights"></div>
+<!--内容模块-->
+<div class="content">
+    <h2>檀木简介</h2>
+    <h3>TAN MU JIAN JIE</h3>
+    <br>
+    <hr>
+    <br>
+    <p><b><em>檀</em></b>，梵语是布施的意思，因其木质坚硬，香气芬芳永恒，色彩绚丽多变，且百毒不侵，万古不朽，又能避邪，故又称<b>圣檀</b>。</p>
+    <p>世界上仅存有<b><em>
+        <ins>沈檀、檀香、绿檀、紫檀、黑檀、红檀、金药檀</ins>
+    </em></b> 等，而且数量极其有限。其质地紧密坚硬、色彩绚丽多变、香气芬芳永恒，且百毒不侵，又能避邪治病，所以人们常常把它作为<strong>吉祥物</strong>，以保平安吉祥。
+    </p>
+    <br>
+    <hr>
+    <h2>新品发布</h2>
+    <h3>XIN PIN FA BU</h3>
+    <br>
+    <img src="pic01.jpg"/>
+    <br>
+    <h2>高端原创</h2>
+    <h3>GAO DUAN YUAN CHUANG</h3>
+    <br>
+    <img src="pic02.jpg"/>
+</div>
+<!--版权模块-->
+<div class="rights">
+    <p>联网医疗保健信息服务 审核同意书 浙卫网审【2014】6号© 2013-2016 TMALL.COM 版权所有</p>
+</div>
 </body>
 </html>
