--- a/实验课/家居网/家居网.html
+++ b/实验课/家居网/家居网.html
@@ -16,18 +16,131 @@
 <!--guide-->
 <div id="guide">
     <ul class="nav">
-        <li><a href="#">首页</a></li>
-        <li><a href="#">设计案例</a></li>
-        <li><a href="#">装修图库</a></li>
-        <li><a href="#">有问必答</a></li>
-        <li><a href="#">逛商品</a></li>
+        <ul>
+            <ul class="one">
+                <li>首页</li>
+            </ul>
+            <ul class="one">
+                <li>设计案例</li>
+            </ul>
+            <ul class="one">
+                <li>装修图库</li>
+            </ul>
+            <ul class="one">
+                <li>有问必答</li>
+            </ul>
+            <ul class="one">
+                <li>逛商品</li>
+            </ul>
+        </ul>
     </ul>
 </div>
 <!--banner-->
-<div id="banner"></div>
+<div id="banner">
+    <img src="banner.jpg">
+</div>
+<div class="content1">
+    <div class="pic">
+        <div class="p">
+            <img src="pic01.jpg"/>
+            <p class="p1">浏览设计案例</p>
+            <p class="p2">设计师原创作品</p>
+        </div>
+        <div class="p">
+            <img src="pic02.jpg"/>
+            <p class="p1">找到满意的设计师</p>
+            <p class="p2">设计师云集于此</p>
+        </div>
+        <div class="p">
+            <img src="pic03.jpg"/>
+            <p class="p1">装修疑问</p>
+            <p class="p2">每秒钟都有设计师在线</p>
+        </div>
+        <div class="p">
+            <img src="pic04.jpg"/>
+            <p class="p1">在线担保交易</p>
+            <p class="p2">资金托管，满意担保</p>
+        </div>
+    </div>
+</div>
 <!--content-->
-<div id="content"></div>
+<div class="content2">
+    <p>设计案例</p>
+    <hr color="#CCCCCC" size="1px"/>
+    <div><img src="pic05.jpg"/></div>
+    <div><img src="pic06.jpg"/></div>
+    <div><img src="pic07.jpg"/></div>
+    <div><img src="pic08.jpg"/></div>
+    <div><img src="pic09.jpg"/></div>
+    <div><img src="pic10.jpg"/></div>
+</div>
+<div class="content3">
+    <p>最新动态</p>
+    <hr color="#CCCCCC" size="1px"/>
+    <div class="o1">
+        <p class="p3">有问必答</p>
+        <div class="P1">
+            <img src="pic01.png"/>
+            <p class="p4">家具用品那个品牌好</p>
+            <p class="p5">回答：谐美家具用的很不错...</p>
+        </div>
+        <hr color="#CCCCCC" size="1px"/>
+        <div class="W1">
+            <img src="pic02.png"/>
+            <p class="p4">厨房在那方位风水好</p>
+            <p class="p5">回答：看风水要结合...</p>
+        </div>
+        <hr color="#CCCCCC" size="1px"/>
+        <div class="P1">
+            <img src="pic03.png"/>
+            <p class="p4">卧室多大比较合适</p>
+            <p class="p5">回答：一般卧室的大小...</p>
+        </div>
+    </div>
+    <div class="o1">
+        <p class="p3">发布需求</p>
+        <div class="P1">
+            <img src="pic04.png"/>
+            <p class="p4">周小姐提交了设计需求</p>
+            <p class="p5">上海110平二手住宅...</p>
+        </div>
+        <hr color="#CCCCCC" size="1px"/>
+        <div class="P1">
+            <img src="pic05.png"/>
+            <p class="p4">林小姐提交了设计需求</p>
+            <p class="p5">四川高新区200平别墅...</p>
+        </div>
+        <hr color="#CCCCCC" size="1px"/>
+        <div class="P1">
+            <img src="pic06.png"/>
+            <p class="p4">马先生提交了设计需求</p>
+            <p class="p5">福建南平150平住宅...</p>
+        </div>
+    </div>
+    <div class="o1">
+        <p class="p3">预约设计师</p>
+        <div class="P1">
+            <img src="pic07.png"/>
+            <p class="p4">李先生预约了酷番做设计</p>
+            <p class="p5">长春住宅空间100平</p>
+        </div>
+        <hr color="#CCCCCC" size="1px"/>
+        <div class="P1">
+            <img src="pic08.png"/>
+            <p class="p4">李先生预约了一米阳光做设计</p>
+            <p class="p5">北京住宅空间90平</p>
+        </div>
+        <hr color="#CCCCCC" size="1px"/>
+        <div class="P1">
+            <img src="pic09.png"/>
+            <p class="p4">李先生预约了旋风原创做设计</p>
+            <p class="p5">河北住宅空间130平</p>
+        </div>
+    </div>
+</div>
 <!--footer-->
-<div id="footer"></div>
+<div id="footer">
+    <p>关于我们|联系我们|意见建议|使用条款<br>免责声明：本网站部分内容由用户自行上传，如权利人发现存在误传其作品形情，请及时与本站联系</p>
+</div>
 </body>
 </html>
