--- a/Example/浮动应用.html
+++ b/Example/浮动应用.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>浮动应用</title>
+    <title>浮动的应用</title>
     <style type="text/css">
         .one {
             width: 100px;
