--- a/Example/css定义背景颜色.html
+++ b/Example/css定义背景颜色.html
@@ -6,7 +6,8 @@
     <style type="text/css">
         h2 {
             font-family: "微软雅黑";
-            color: #F00
+            color: #F00;
+            font-size: 1em;
         }
 
         p {
