--- a/Calendar/Calender.html
+++ b/Calendar/Calender.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Calender</title>
-    <link rel="stylesheet" type="text/css" href="Style.css">
-    <script type="text/javascript" src="Style.js"></script>
-    <script src="jquery-3.6.0.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="assets/Style.css">
+    <script type="text/javascript" src="assets/Style.js"></script>
+    <script type="text/javascript" src="assets/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
